examples/test/testpolicy19968.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19968
  namespace: namespace360
spec:
  podSelector:
    matchLabels:
      key4: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value49
          key12: value42
          key33: value17
      podSelector:
        matchLabels:
          key17: value29
          key28: value19
